concurrency up to 14

--- a/org/2019-10-19-idea.org
+++ b/org/2019-10-19-idea.org
@@ -15,3 +15,9 @@ compileJava.options.encoding = 'UTF-8'
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
+** maven-idea bytecode version
+pom添加
+<properties>
+    <maven.compiler.source>1.9</maven.compiler.source>
+    <maven.compiler.target>1.9</maven.compiler.target>
+</properties>
